GL/Projet_GL/src/test/deca/syntax/invalid/AvecObjet/class_avant_main.deca
// Test : Decl class avant les declaration de main
// But : détecter la déclaration de main avant les décls de classe
// Type d'erreur : erreur syntaxique
// Résultat attendu : mismatched input 'class' expecting {';', ',', '=', '+', '-', '*', '/', '%', '==', '!=', '<=', '>=', '>', '<', '&&', '||', '.'}


{
    Test t = new Test();
}

class Test{
   int x;

}

